--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,4 +27,6 @@ jobs:
       - name: Run tests
         run: npm test  # or yarn test
 
-        - name: 
+      - name: Fail if test fails
+        if: failure()
+        run: exit 1
