--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
   merge:
     runs-on: ubuntu-latest
     needs: test
-    if: success()  # This ensures the merge only happens if the tests pass
+    if: github.event_name == 'pull_request' && success()
 
     steps:
       - name: Merge pull request
