--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,55 +1,25 @@
-name: Test and Merge
+name: Test and Block Merge
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
-    branches:
-      - main
+    branches: [main]
+  push:
+    branches: [main]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '20' 
-
-      - name: Install dependencies
-        run: npm install  
-
-      - name: Run tests
-        run: npm test  
-
-  merge:
-    runs-on: ubuntu-latest
-    needs: test
-    if: always() && github.event_name == 'pull_request'  
-    steps:
-      - name: Check test status
-        run: |
-          if [[ "${{ needs.test.result }}" != "success" ]]; then
-            echo "❌ Tests failed. Merge aborted."
-            exit 1
-          fi
-
-      - name: Merge pull request
-        uses: peter-evans/merge-pull-request@v2
-        with:
-          pull-request-number: ${{ github.event.pull_request.number }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          node-version: 20
+      - run: npm install
+      - run: npm test
 
   alert:
     runs-on: ubuntu-latest
-    needs: test
-    if: failure()  # This step runs only if tests fail
+    needs: [test]
+    if: ${{ failure() }}
     steps:
-      - name: Send alert
-        run: |
-          echo "❌ Tests failed! Fix the errors before merging."
+      - run: echo "❌ Tests failed! Check the workflow logs for details."
